--- a/src/app/features/Jobs/emp-posted-jobs/emp-posted-jobs.html
+++ b/src/app/features/Jobs/emp-posted-jobs/emp-posted-jobs.html
@@ -1,4 +1,8 @@
 <body>
+      <div class="nav">
+        <a routerLink="/empDashboard"><i class="bi bi-arrow-left me-3 fs-3"></i> </a>
+        <h5 class="mt-2">Back to Dashboard</h5>
+    </div>
 <div class="container my-4">
 
   <!-- Header -->
@@ -130,12 +134,12 @@
         <p class="small text-muted">
           <i class="bi bi-people me-1"></i>{{job.applicationsCount}} applications
         </p>
-        <span class="tag">{{job.industry}}</span>
+
         <div class="mt-4 d-flex justify-content-center">
           <button class="btn btn-outline-secondary px-5 me-3" [routerLink]="['/editJob',job.id]">
             <i class="bi bi-pencil-square me-2"></i>Edit
-          </button>
-          <button class="btn btn-primary px-5"> 
+          </button> 
+          <button class="btn btn-primary px-5" [routerLink]="['/appViewJob',job.id]"> 
             <i class="bi bi-people me-2"></i> View Apps
           </button>
         </div>
