Edits in Footer & Job Details

--- a/src/app/features/Jobs/job-details/job-details.css
+++ b/src/app/features/Jobs/job-details/job-details.css
@@ -1,4 +1,14 @@
 
+.nav{
+    background: var(--basic-color);
+    color: white;
+    padding: 20px 50px;
+
+    a{
+        color: white;
+    }
+}
+
 /*--------------------------- Job Details Section ------------------------------*/
 .job-details{
     padding: 20px;
