--- a/src/app/shared/components/navbar/navbar.html
+++ b/src/app/shared/components/navbar/navbar.html
@@ -19,7 +19,11 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <!-- Explore Link -->
         <li class="nav-item">
-          <a class="nav-link" routerLink="/explore" routerLinkActive="active">Explore Jobs</a>
+          <a class="nav-link fw-medium" routerLink="/explore" routerLinkActive="active">Explore Jobs</a>
+        </li>
+        <!-- Saved Jobs -->
+        <li class="nav-item">
+          <a class="nav-link fw-medium" routerLink="/savedJobs" routerLinkActive="active">Saved Jobs</a>
         </li>
 
       </ul>
