--- a/src/app/features/Jobs/job-view/job-view.html
+++ b/src/app/features/Jobs/job-view/job-view.html
@@ -31,7 +31,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-1">
+        <div class="col-1" *ngIf="!isAdmin() || !isEmployer()">
             <button class="save-job-btn" (click)="AddToSaved()" [class.saved]="isSavedFlag()">
                 <i class="bi" [class.bi-bookmark-check]="isSavedFlag()" [class.bi-bookmark]="!isSavedFlag()"></i>
             </button>
@@ -57,7 +57,7 @@
                 <i class="bi bi-box-arrow-up-right me-2"></i> View Details
             </button>
         </div>
-        <div class="col-lg-4 col-md-12 col-sm-12">
+        <div class="col-lg-4 col-md-12 col-sm-12" *ngIf="!isAdmin() || !isEmployer()">
             <button class="apply-now-btn my-2" [routerLink]="['/seekerApp', job.id, 'personal-info']">
                 Apply Now
             </button>
