--- a/src/app/features/app-admin-dashboard/admin-dashboard-analytics/admin-dashboard-analytics.html
+++ b/src/app/features/app-admin-dashboard/admin-dashboard-analytics/admin-dashboard-analytics.html
@@ -292,8 +292,8 @@
                 </div>
                 <div class="details-row">
                   <span class="details-label">Gender:</span>
-                  <span class="details-value">{{ selectedSeeker.gender || 'N/A' }}</span>
-                </div>
+                     <span class="details-value">{{ getGenderLabel(selectedSeeker.gender) }}</span>
+                 </div>
                 <div class="details-row">
                   <span class="details-label">Date of Birth:</span>
                   <span class="details-value">{{ selectedSeeker.dateOfBirth || 'N/A' }}</span>
